fixed layout issue with large texts
- greatly improved support for large description texts

--- a/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
+++ b/src/components/ProjectSlider/ProjectShowcase/ProjectShowcase.module.css
@@ -1,13 +1,18 @@
 .container {
+    box-sizing: border-box;
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: auto auto;
-    grid-template-areas: "image_gallery" " description";
+    grid-template-rows: minmax(0, 30rem) minmax(0, 13rem);
+    grid-template-areas: "image_gallery" "description";
 
     padding: 1rem;
     padding-top: 2rem;
 
     row-gap: 0.8rem;
+
+    border-radius: 10px;
+
+    overflow: hidden;
 }
 
 .background {
@@ -21,20 +26,44 @@
     box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
     -webkit-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
     -moz-box-shadow: 0px 0px 7px 0px rgba(0, 0, 0, 0.75);
-
-    border-radius: 10px;
 }
 
 .image_gallery {
     grid-area: image_gallery;
 }
 
-.description {
+.description_container {
     grid-area: description;
-    text-wrap: nowrap;
+
+    display: flex;
+    flex-direction: column;
+    text-wrap: wrap;
     text-overflow: ellipsis;
+    white-space: break-spaces;
+}
+
+.description {
+    overflow-x: auto;
+
+    margin: 0;
+    padding: 0;
 }
 
 .immutable {
     user-select: none;
+}
+
+.description::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: var(--scrollbar-background);
+}
+
+.description::-webkit-scrollbar {
+    width: 0.3rem;
+    background-color: var(--scrollbar-background);
+}
+
+.description::-webkit-scrollbar-thumb {
+    background-color: var(--scrollbar-background-thumb);
+    border: 2px solid var(--scrollbar-background-border);
 }
